--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <body>
   <!-- Sidebar -->
   <div class="sidebar">
-    <img src="./hinh/06g.jpg" alt="avatar">
+    <img src="./06g.jpg" alt="avatar">
     <h2>HÀ TẤN PHÁT</h2>
     <p class="role">Thực Tập Sinh IT - Web Developer</p>
 
